fix: mobile overflow issue

--- a/type-3/css/style.scss
+++ b/type-3/css/style.scss
@@ -34,6 +34,10 @@
     }
 }
 
+.wrap {
+    overflow: hidden;
+}
+
 header {
     color: #ffffff;
 }
